[package]
name = "btcquest"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8" # For generating random private keys
bitcoin = "0.30" # Bitcoin library for address and key generation
reqwest = "0.11" # For HTTP requests to query balance
tokio = { version = "1", features = ["full"] } # Async runtime for reqwest
serde = { version = "1.0", features = ["derive"] } # For deserializing JSON